--- a/friend-finder-frontend/package.json
+++ b/friend-finder-frontend/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.522.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
